crates/lang/macro/tests/ui/trait_def/fail/empty_definition.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait EmptyDefinition {}

fn main() {}
