crates/lang/macro/tests/ui/trait_def/fail/empty_definition.stderr
error: encountered invalid empty ink! trait definition
 --> $DIR/empty_definition.rs:4:1
  |
4 | pub trait EmptyDefinition {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
